[package]
name = "wbchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4.3"
schnorrkel = "0.10.2"
num = "0.4.0"
merlin = "3.0.0"
tokio = { version = "1", features = ["full"] }
